tests/negative/gold/bad-global-name2-test.gold
tests/negative/bad-global-name2-test.toit:5:9: error: Unexpected token: :=
foo.bar := 499
        ^~
tests/negative/bad-global-name2-test.toit:5:1: error: Invalid name
foo.bar := 499
^~~~~~~
Compilation failed
